--- a/style.css
+++ b/style.css
@@ -24,8 +24,26 @@ body {
   color: var(--secondary-color);
   line-height: 1.7;
 }
+.custom-shape-divider-bottom-1744720210 {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+  transform: rotate(180deg);
+}
 
+.custom-shape-divider-bottom-1744720210 svg {
+  position: relative;
+  display: block;
+  width: calc(100% + 1.3px);
+  height: 83px;
+}
 
+.custom-shape-divider-bottom-1744720210 .shape-fill {
+  fill: #FFFFFF;
+}
 /* Navbar */
 nav {
   display: flex;
