--- a/style.css
+++ b/style.css
@@ -22,26 +22,6 @@ body {
   line-height: 1.7;
 }
 
-.custom-shape-divider-bottom-1744720210 {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  overflow: hidden;
-  line-height: 0;
-  transform: rotate(180deg);
-}
-
-.custom-shape-divider-bottom-1744720210 svg {
-  position: relative;
-  display: block;
-  width: calc(100% + 1.3px);
-  height: 83px;
-}
-
-.custom-shape-divider-bottom-1744720210 .shape-fill {
-  fill: #FFFFFF;
-}
 
 /* Navbar */
 nav {
@@ -178,7 +158,7 @@ nav {
 
 /* Hero Section Layout */
 .section-1 {
-  height: 90vh;
+  height: 80vh;
   display: flex;
   flex-wrap: wrap;
   background: linear-gradient(135deg, var(--primary-color), rgba(15, 23, 42, 0.95));
@@ -186,7 +166,7 @@ nav {
   margin-bottom: 5vw;
   align-items: center;
   justify-content: space-between;
-  padding: 0 10vw;
+  padding: 0 0vw 0 5vw;
   position: relative;
   overflow: hidden;
   transition: padding 0.3s ease;
@@ -220,7 +200,7 @@ nav {
 /* Left Section with Text */
 .sec1-left {
   flex: 1;
-  min-width: 350px;
+ /* max-width: 450px; */
   margin: 0 20px;
   text-align: left;
   position: relative;
@@ -494,7 +474,7 @@ section p {
 .skills-section {
   margin: 5% 0%;
   padding: 30px 3%;
-  background: #f0f4f8;
+  background: rgb(23, 34, 54);
 }
 
 .skills-title {
@@ -502,7 +482,7 @@ section p {
   font-size: 1.8rem;
   font-weight: bold;
   margin-bottom: 25px;
-  color: #333;
+  color: #ffffff;
 }
 
 /* Grid for 2-row layout (4 boxes per row on desktop) */
@@ -721,7 +701,7 @@ section p {
 
 .portfolio-header h2 {
   font-size: 32px;
-  color: black;
+  color: rgb(255, 255, 255);
 }
 .project-modal-overlay {
   display: none;
@@ -1399,6 +1379,7 @@ footer {
   .portfolio-header h2,
   .contact-header h2 {
     font-size: 25px;
+
   }
 
   .about-description {
